--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ name = "02_example"
 path = "examples/02_example/main.rs"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+validator = { version = "0.13.0", features = ["derive"] }
