--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,21 @@ authors = ["Nebojša Koturović <necer95@gmail.com>"]
 edition = "2018"
 
 [[bin]]
-name = "01_hello"
-path = "examples/01_hello/main.rs"
+name = "01_validation"
+path = "examples/01_validation/main.rs"
 
 [[bin]]
-name = "02_example"
-path = "examples/02_example/main.rs"
+name = "02_rbatis"
+path = "examples/02_rbatis/main.rs"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.6.0", features = ["full"] }
+chrono = { version = "0.4", features = ["serde"] }
+log = "0.4"
+fast_log="1.3"
+bigdecimal = "0.2"
+rbatis = "1.8.85"
 validator = { version = "0.13.0", features = ["derive"] }
+derive_builder = "0.10.2"
