--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ path = "examples/01_validation/main.rs"
 name = "02_rbatis"
 path = "examples/02_rbatis/main.rs"
 
+[[bin]]
+name = "03_const"
+path = "examples/03_const/main.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
